[project]
name = "whl-ip-tools"
version = "0.1.0"
description = "IP protocol analysis toolkit — send, capture, and analyze network packets"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "textual>=0.44.0",
    "kaitaistruct>=0.10",
]

[project.scripts]
whl-ip-tools = "whl_ip_tools.cli:app"

[project.optional-dependencies]
dev = [
    "pre-commit>=4.0.0",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
