[project]
name = "whl-ip-tools"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
  { name = "Pride Leong", email = "lykling.lyk@gmail.com" }
]
version = "0.1.2"
description = "IP protocol analysis toolkit — send, capture, and analyze network packets"
requires-python = ">=3.8"
license = "Apache-2.0"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "textual>=0.44.0",
    "kaitaistruct>=0.10",
]

[project.scripts]
whl-ip-tools = "whl_ip_tools.cli:app"

[project.optional-dependencies]
dev = [
    "pre-commit>=4.0.0",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py38"
line-length = 88
extend-exclude = ["catl_frame.py", "navi_perception.py", "pkt_sender.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"

[project.urls]
"Homepage" = "https://github.com/wheelos-tools/whl-ip-tools/tree/main"
"Bug Tracker" = "https://github.com/wheelos-tools/whl-ip-tools/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
